--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,6 +13,25 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             
+            <div class="form-group">
+                <label asp-for="Input.FirstName"></label>
+                <input asp-for="Input.FirstName" class="form-control" />
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Input.LastName"></label>
+                <input asp-for="Input.LastName" class="form-control" />
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Input.DoctorId"></label>
+                <input asp-for="Input.DoctorId" class="form-control" />
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Input.DoctorSpeciality"></label>
+                <input asp-for="Input.DoctorSpeciality" class="form-control" />
+            </div>
 
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
