--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,8 +1,10 @@
+
 @page
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
 }
+
 
 <h1>@ViewData["Title"]</h1>
 
@@ -24,16 +26,6 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="Input.DoctorId"></label>
-                <input asp-for="Input.DoctorId" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Input.DoctorSpeciality"></label>
-                <input asp-for="Input.DoctorSpeciality" class="form-control" />
-            </div>
-
-            <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
@@ -48,10 +40,24 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+
+            <div class="form-group">  
+                <label asp-for="AreUDoctor" ></label>
+                <input type="checkbox" id="chkDoctor" value="true" /> 
+           </div>
+           
+            <div id="DoctorOnly" class="form-group">
+                <label asp-for="Input.DoctorId"></label>
+                <input asp-for="Input.DoctorId" class="form-control"  />
+
+                <label asp-for="Input.DoctorSpeciality"></label>
+                <input asp-for="Input.DoctorSpeciality" class="form-control" />
+            </div>
+
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+     <div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to register.</h4>
             <hr />
@@ -81,8 +87,23 @@
             }
         </section>
     </div>
+    
 </div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+                <script type="text/javascript">
+                $(function () {
+                    $("#chkDoctor").click(function () {
+                        if ($(this).is(":checked")) {
+                            $("#DoctorOnly").show();
+                        } else {
+                            $("#DoctorOnly").hide();
+                        }
+                    });})
+                
+                </script>
 }
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" >
+
+
