--- a/Views/Prescriptions/Index.cshtml
+++ b/Views/Prescriptions/Index.cshtml
@@ -46,44 +46,46 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DrFirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DrLastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PatientFirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PatientLastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DiseaseDiscription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MedicinName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PillsPerDay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Instructions)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.PrescriptionID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PrescriptionID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PrescriptionID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DrFirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DrLastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PatientFirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PatientLastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DiseaseDiscription)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MedicinName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PillsPerDay)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Instructions)
+                </td>
+
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.PrescriptionID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.PrescriptionID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.PrescriptionID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
